Definitive fix for the flickering on page load

--- a/css/pushy.css
+++ b/css/pushy.css
@@ -79,6 +79,13 @@
     -webkit-perspective: 1000;
 }
 
+.pushy-static {
+    -webkit-transition: -webkit-transform 0;
+    -moz-transition: -moz-transform 0;
+    -o-transition: -o-transform 0;
+    transition: transform 0;
+}
+
 /* Site Overlay */
 
 .site-overlay{
